--- a/MyPortfolio/about.html
+++ b/MyPortfolio/about.html
@@ -119,6 +119,72 @@
             </div>
         </div>
         <style>
+        @media (max-width: 600px) {
+            .main-project-container, .about-container {
+                padding: 1.2rem 0.3rem 1.2rem 0.3rem;
+                margin: 1.2rem auto 1.2rem auto;
+                border-radius: 10px;
+            }
+            .project-title, .about-title {
+                font-size: 2.1rem;
+                margin-bottom: 0.4rem;
+            }
+            .project-summary, .about-summary {
+                font-size: 0.98rem;
+                margin-bottom: 1rem;
+            }
+            .project-carousel {
+                max-width: 100vw;
+                height: 200px;
+                border-radius: 10px;
+                margin: 1.2rem auto 1rem auto;
+            }
+            .project-carousel-images {
+                min-height: 0;
+                height: 200px;
+            }
+            .project-carousel-image {
+                height: 200px;
+                border-radius: 10px;
+                object-fit: contain;
+                max-width: 100vw;
+            }
+            .project-carousel-controls span {
+                font-size: 1.3rem !important;
+            }
+            .project-section-title, .about-section-title {
+                font-size: 1rem;
+                margin-bottom: 0.4rem;
+                margin-top: 0.7rem;
+            }
+            .project-section-text, .about-section-text {
+                font-size: 0.88rem;
+                margin-bottom: 0.7rem;
+            }
+            .project-languages-container, .about-skills-container, #skillsContainer {
+                grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+                gap: 0.8rem 0.8rem;
+                max-width: 98vw;
+                padding: 1rem 0.2rem 0.5rem 0.2rem;
+                border-radius: 10px;
+            }
+            .skill img, .about-skill img, #skillsContainer img {
+                width: 32px !important;
+                height: 32px !important;
+                margin-bottom: 0.3rem !important;
+            }
+            .skill p, .about-skill p, #skillsContainer p {
+                font-size: 0.82rem !important;
+            }
+            .project-btn-row, .about-btn-row {
+                margin-top: 1rem !important;
+            }
+            .themed-btn {
+                font-size: 0.98rem;
+                padding: 0.7rem 1.2rem;
+            }
+        }
+        }
         .themed-btn {
             background: #101c10;
             color: #39ff14;
