--- a/MyPortfolio/trialgenie.html
+++ b/MyPortfolio/trialgenie.html
@@ -12,6 +12,65 @@
     <link rel="stylesheet" href="mystyle.css">
     <title>TrialGenie</title>
     <style>
+        @media (max-width: 600px) {
+            .main-project-container {
+                padding: 1.2rem 0.3rem 1.2rem 0.3rem;
+                margin: 1.2rem auto 1.2rem auto;
+                border-radius: 10px;
+            }
+            .project-title {
+                font-size: 2.1rem;
+                margin-bottom: 0.4rem;
+            }
+            .project-summary {
+                font-size: 0.98rem;
+                margin-bottom: 1rem;
+            }
+            .project-carousel {
+                max-width: 100vw;
+                height: 220px;
+                border-radius: 10px;
+                margin: 1.2rem auto 1rem auto;
+            }
+            .project-carousel-image {
+                height: 220px;
+                border-radius: 10px;
+            }
+            .project-carousel-controls span {
+                font-size: 1.3rem !important;
+            }
+            .project-section-title {
+                font-size: 1rem;
+                margin-bottom: 0.4rem;
+                margin-top: 0.7rem;
+            }
+            .project-section-text {
+                font-size: 0.88rem;
+                margin-bottom: 0.7rem;
+            }
+            .project-languages-container {
+                grid-template-columns: repeat(auto-fit, minmax(90px, 1fr));
+                gap: 1.2rem 1.2rem;
+                max-width: 98vw;
+                padding: 1.2rem 0.3rem 0.7rem 0.3rem;
+                border-radius: 10px;
+            }
+            .skill img {
+                width: 38px !important;
+                height: 38px !important;
+                margin-bottom: 0.4rem !important;
+            }
+            .skill p {
+                font-size: 0.88rem !important;
+            }
+            .project-btn-row {
+                margin-top: 1.2rem !important;
+            }
+            .themed-btn {
+                font-size: 0.98rem;
+                padding: 0.7rem 1.2rem;
+            }
+        }
     .themed-btn {
         background: #101c10;
         color: #39ff14;
@@ -224,6 +283,16 @@
             </div>
         </div>
         <div class="project-btn-row">
+        <!-- Project navigation arrows -->
+        <div id="project-nav-arrows" style="display:flex;justify-content:center;align-items:center;gap:2.5rem;margin:2.5rem 0 0.5rem 0;">
+          <button id="projectLeftArrow" aria-label="Previous Project" style="background:none;border:none;cursor:pointer;font-size:2.5rem;color:#39ff14;filter:drop-shadow(0 0 8px #39ff14);transition:color 0.18s,transform 0.18s;">
+            &#8592;
+          </button>
+          <span style="font-family:'Silkscreen',monospace,serif;font-size:1.2rem;color:#39ff14;">Project 4 / 4</span>
+          <button id="projectRightArrow" aria-label="Next Project" style="background:none;border:none;cursor:pointer;font-size:2.5rem;color:#39ff14;filter:drop-shadow(0 0 8px #39ff14);transition:color 0.18s,transform 0.18s;">
+            &#8594;
+          </button>
+        </div>
             <div style="display: flex; flex-direction: column; align-items: center; gap: 1.5rem; margin: 2.2rem 0 0.5rem 0;">
                 <a href="index.html" style="width:100%;display:flex;justify-content:center;text-decoration:none;">
                     <button class="themed-btn">Home</button>
@@ -232,6 +301,22 @@
         </div>
     </div>
     <script>
+        // Project navigation logic
+        const projectPages = [
+          'augie.html',
+          'duality.html',
+          'honewdewIsland.html',
+          'trialGenie.html'
+        ];
+        const currentIndex = 3; // trialGenie.html is index 4 (0-based)
+        document.getElementById('projectLeftArrow').addEventListener('click', function() {
+          let prevIdx = (currentIndex - 1 + projectPages.length) % projectPages.length;
+          window.location.href = projectPages[prevIdx];
+        });
+        document.getElementById('projectRightArrow').addEventListener('click', function() {
+          let nextIdx = (currentIndex + 1) % projectPages.length;
+          window.location.href = projectPages[nextIdx];
+        });
         let trialgenieCurrentSlide = 0;
         let trialgenieImages, trialgenieContainer;
         document.addEventListener('DOMContentLoaded', function() {
